--- a/Application/Pages/Manager/Login.cshtml
+++ b/Application/Pages/Manager/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/manager/login"
-@model Application.Pages.Manager.Login
+@model Application.Pages.Manager.LoginModel
 @{
     ViewData["Title"] = "Manager Login";
 }
