--- a/Application/Pages/Manager/TripDetails.cshtml
+++ b/Application/Pages/Manager/TripDetails.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/manager/trips/{tripId:guid}"
 @using Data.Enums
-@model Application.Pages.Manager.TripDetails
+@using Application.Pages.Manager
+@model Application.Pages.Manager.TripDetailsModel
 @{
     ViewData["Title"] = "Trip Details";
 }
@@ -10,21 +11,15 @@
     .list-group-item {
         border: none;
     }
-    
-    .vertical-line {
-        border-left: 1px solid #000; /* Adjust the color and width as needed */
-        height: 100px; /* Adjust the height of the line as needed */
-        margin: 0 auto; /* Center the line horizontally */
-    }
 </style>
 
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
-            <a href="/manager/home" style="text-decoration: none">Tours</a>
+            <a href="@Url.Page("Tours")" style="text-decoration: none">Tours</a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">
-            <a href="/manager/tours/@Model.Tour.Id" style="text-decoration: none">@Model.Tour.Id</a>
+            <a href="@Url.Page("TourDetails", new { TourId = Model.Tour.Id })" style="text-decoration: none">@Model.Tour.Id</a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">Trips</li>
         <li class="breadcrumb-item active" aria-current="page">@Model.Trip.Id</li>
@@ -166,8 +161,8 @@
                 var totalCostInGroup = group.IncurredCostActivities.Select(a => a.Cost).Sum();
                 <li class="list-group-item">
                     <h4 style="color: #9e2a2b">
-                        Group @group.GroupNo -
-                        <b style="color: #65451F">@totalCostInGroup</b> <span style="color: #4477CE">VND</span>
+                        Group @group.GroupNo total:
+                        <b style="color: #65451F">@TripDetailsModel.FormatMoney(totalCostInGroup)</b>
                     </h4>
                     <ul class="list-group">
                         <!-- Incurred Costs -->
@@ -176,14 +171,14 @@
                             <li class="list-group-item">
                                 <div class="row">
                                     <div class="col-md-9">
-                                        <h6 class="text-primary">
-                                            <b>@cost.i. @cost.value.Title</b>
-                                        </h6>
                                         <p>
-                                            <b>Note:</b> @cost.value.Note
+                                            <b>Note: </b> <b class="text-primary">@cost.value.Note</b>
                                         </p>
+                                        @* <p> *@
+                                        @*     <b>Note:</b> @cost.value.Note *@
+                                        @* </p> *@
                                         <p>
-                                            <b>Amount: <span style="color: #157811">@cost.value.Cost</span> <span style="color: #4477CE">VND</span></b>
+                                            <b>Amount: <span style="color: #157811">@TripDetailsModel.FormatMoney(cost.value.Cost)</span></b>
                                         </p>
                                         <p>
                                             <b>Date:</b> @cost.value.CreatedAt
@@ -216,7 +211,7 @@
                 .Select(a => a.Cost)
                 .Sum();
         }
-        <h2>Total: <b style="color: #084f09">@totalCost</b> <span style="color: #4477CE">VND</span></h2>
+        <h3 style="color: #E55807"><b>Trip Total: </b><b style="color: #084f09">@TripDetailsModel.FormatMoney(totalCost)</b></h3>
 
     </div>
 </div>
