--- a/Application/Pages/Manager/TripDetails.cshtml
+++ b/Application/Pages/Manager/TripDetails.cshtml
@@ -57,16 +57,16 @@
                 <div>
                     <h4 class="mb-4">Trip Info: </h4>
                     <p>
-                        <strong>ID: <span style="color: #6c757d">@Model.Trip.Id.ToString().ToUpper()</span></strong>
+                        <strong>ID: <span style="color: #40916c">@Model.Trip.Id.ToString().ToUpper()</span></strong>
                     </p>
                     <p>
                         <strong>Code:<span class="card-title" style="color: #3f37c9"> @Model.Trip.Code</span></strong>
                     </p>
                     <p>
-                        <strong>Start Time:&nbsp;</strong> <b class="text-success">@DateOnly.FromDateTime(Model.Trip.StartTime)</b>
+                        <strong>Start Time:&nbsp;</strong> <b style="color: #9A3B3B">@DateOnly.FromDateTime(Model.Trip.StartTime)</b>
                     </p>
                     <p>
-                        <strong>End Time:&nbsp;&nbsp;&nbsp;</strong> <b class="text-success">@DateOnly.FromDateTime(Model.Trip.EndTime)</b>
+                        <strong>End Time:&nbsp;&nbsp;&nbsp;</strong> <b style="color: #9A3B3B">@DateOnly.FromDateTime(Model.Trip.EndTime)</b>
                     </p>
                     <p>
                         <strong>Created At: </strong> @Model.Trip.CreatedAt
@@ -149,7 +149,7 @@
     </div>
 
     <div class="col col-md-6" style="padding-left: 40px">
-        <h4 style="color:#765827;">Incurred Costs: </h4>
+        <h4>Incurred Costs: </h4>
         @{
             var incurredCostsNotEmpty = Model.Trip.TourGroups.Any(g => g.IncurredCostActivities.Count > 0);
         }
