--- a/Application/Pages/Manager/Index.cshtml
+++ b/Application/Pages/Manager/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@page
+﻿@page "/manager"
+@using Newtonsoft.Json
 @model Application.Pages.Manager.IndexModel
 @{
     ViewData["Title"] = "Index";
@@ -7,4 +8,85 @@
 <div class="text-center">
     <h1 class="display-4">Welcome To Application</h1>
     <p>Redirect to <a href="/swagger">Swagger</a>.</p>
+</div>
+
+<div>
+    <h3>DEMO: </h3>
+    <br/>
+    <h5>Trigger Weather Alert: </h5>
+    <form method="post" id="alert-form" asp-page-handler="WeatherAlertTrigger">
+        <div>
+            <select name="trip" id="trip" form="alert-form">
+                @foreach (var trip in Model.Trips)
+                {
+                    <option value="@trip.Id">@trip.Tour.Title: @DateOnly.FromDateTime(trip.StartTime) - @DateOnly.FromDateTime(trip.EndTime)</option>
+                }
+            </select>
+        </div>
+
+        <br/>
+        <button type="submit" class="btn btn-primary">Trigger</button>
+    </form>
+
+    @if (Model.WeatherAlert != null)
+    {
+        <br/>
+        <b class="text-primary">Weather alert demo triggered: </b>
+        
+        <div style="border: 1px solid #ccc; padding: 12px; background-color: #f5f5f5;">
+            <div class="name-value-pair">
+                <b class="name">Headline:</b>
+                <span>@Model.WeatherAlert.Headline</span>
+            </div>
+
+            <div class="name-value-pair">
+                <b class="name">Urgency:</b>
+                <span>@Model.WeatherAlert.Urgency</span>
+            </div>
+
+            <div class="name-value-pair">
+                <b class="name">Severity:</b>
+                <span>@Model.WeatherAlert.Severity</span>
+            </div>
+
+            <div class="name-value-pair">
+                <b class="name">Areas:</b>
+                <span>@Model.WeatherAlert.Areas</span>
+            </div>
+
+            <div class="name-value-pair">
+                <b class="name">Certainty:</b>
+                <span>@Model.WeatherAlert.Certainty</span>
+            </div>
+            <div class="name-value-pair">
+                <b class="name">Event:</b>
+                <span>@Model.WeatherAlert.Event</span>
+            </div>
+
+            <div class="name-value-pair">
+                <b class="name">Note:</b>
+                <span>@Model.WeatherAlert.Note</span>
+            </div>
+
+            <div class="name-value-pair">
+                <b class="name">Effective:</b>
+                <span>@Model.WeatherAlert.Effective</span>
+            </div>
+
+            <div class="name-value-pair">
+                <b class="name">Expires:</b>
+                <span>@Model.WeatherAlert.Expires</span>
+            </div>
+
+            <div class="name-value-pair">
+                <b class="name">Description:</b>
+                <span>@Model.WeatherAlert.Description</span>
+            </div>
+
+            <div class="name-value-pair">
+                <b class="name">Instruction:</b>
+                <span>@Model.WeatherAlert.Instruction</span>
+            </div>
+        </div>
+    }
 </div>
